# uvdar_gazebo_plugin

./: .gitmodules  CMakeLists.txt  README.md  exec_while_testing.sh  package.xml  uv.world
.ci/: ci_before_install.sh  install.sh
.github/workflows/: rostest.yml
include/ObjectMgr/: LedMgr.cpp  LedMgr.h  ObjectMgr.cpp  ObjectMgr.h
include/collisions/: OPC_RayCollider.h  config.h  intersection.hpp  objects.h
include/undistortFunctions/: ocam_functions.cpp
models/uvcam/: model.config  model.sdf
models/uvled/: model.sdf
msg/: CamInfo.msg  LedInfo.msg  LedMessage.msg
src/: uvcam.cc  uvled.cc
src/uvcam/: CMakeLists.txt  package.xml
src/uvcam/src/: .uvcam.cc.swp  uvcam.cc
src/uvled/: CMakeLists.txt  package.xml
src/uvled/src/: model_push.cc  uvcam.cc  uvled.cc
test/: CMakeLists.txt  xvfb_runner.sh
test/blink_processor/: blink_processor.test  test.cpp  uvdar_blink_processor.launch
test/bluefox_emulator/: bluefox_emulator.test  test.cpp  uvdar_bluefox_emulator.launch
test/detector/: detector.test  test.cpp  uvdar_detector.launch
test/pose_estimator/: pose_estimator.test  test.cpp  uvdar_pose_estimator.launch
test/test_example/: test.cpp  test_example.test
test/uvcam/: CMakeLists.txt  test.cpp  uvcam.test
