<?xml version="1.0"?>
<package format="2">
  <name>uvdar_gazebo_plugin</name>
  <version>1.0.0</version>
  <description>The UVDAR Gazebo package</description>

  <author email="viktor.walter@fel.cvut.cz">Viktor Walter</author>
  <maintainer email="viktor.walter@fel.cvut.cz">Viktor Walter</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>gazebo</depend>
  <depend>roscpp</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
