<?xml version="1.0"?>
<package format="2">
  <name>uvdar_gazebo_plugin</name>
  <version>1.0.0</version>
  <description>The UVDAR Gazebo package</description>

  <author email="viktor.walter@fel.cvut.cz">Viktor Walter</author>
  <maintainer email="viktor.walter@fel.cvut.cz">Viktor Walter</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>gazebo</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>

  <depend>uvdar_core</depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
