<?xml version="1.0"?>
<package format="2">
  <name>uvdar_gazebo_plugin</name>
  <version>1.0.0</version>
  <description>The UVDAR Gazebo package</description>

  <author email="viktor.walter@fel.cvut.cz">Viktor Walter</author>
  <maintainer email="viktor.walter@fel.cvut.cz">Viktor Walter</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>mrs_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>uvdar_core</depend>
  <depend>mrs_uav_gazebo_testing</depend>
  <depend>mrs_uav_gazebo_simulation</depend>
  <depend>mrs_uav_system</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>

</package>
