cmake_minimum_required(VERSION 3.0 FATAL_ERROR)

find_package(gazebo REQUIRED)
find_package(roscpp REQUIRED)
  find_package(OpenCV REQUIRED HINTS /usr/local/lib)
  #if (EXISTS /usr/local/include/opencv2/opencv.hpp)
  #  set(OpenCV_INCLUDE_DIRS /usr/local/include/)
  #  set(OpenCV_LIBRARIES /usr/local/lib/libopencv_core.so)
  #else()
  #  find_package(OpenCV REQUIRED HINTS /usr/local/lib)
  #endif()
include_directories(${GAZEBO_INCLUDE_DIRS} ${OPENCV_INCLUDE_DIRS} include)
link_directories(${GAZEBO_LIBRARY_DIRS} ${OPENCV_LIBRARY_DIRS})
list(APPEND CMAKE_CXX_FLAGS "${GAZEBO_CXX_FLAGS}")

add_library(uvcam SHARED src/uvcam.cc include/undistortFunctions/ocam_functions.cpp)
#message("OCV: ${OpenCV_LIBRARIES}")
target_link_libraries(uvcam ${GAZEBO_LIBRARIES} ${OpenCV_LIBRARIES})
